--- a/CSS/projekt_style.css
+++ b/CSS/projekt_style.css
@@ -1,7 +1,7 @@
 
 body
 {
-    background-image: url(../Image/projekts.png);
+    background-image: url(../Image/Projects.png);
     background-size:cover;
     background-repeat: no-repeat;
 }
