--- a/CSS/projekt_style.css
+++ b/CSS/projekt_style.css
@@ -9,7 +9,7 @@ body
 .ProjBtn
 {
     
-    background-color: #4CAF50; /* Green background */
+    background-color: #4caf7c; /* Green background */
     border: none;              /* Remove borders */
     color: white;             /* White text */
     padding: 15px 32px;        /* Some padding */
@@ -20,5 +20,23 @@ body
     margin: 10px 4px;           /* Some margin */
     cursor: pointer;           /* Pointer/hand icon on hover */
     border-radius: 8px;        /* Rounded corners */
-    
+    transition: background-color 0.4s;
+}
+
+.ProjBtn:hover
+{
+    background-color: aqua;
+    color: red;
+}
+
+.container {
+    display: flex;
+    justify-content: space-around;
+    width: 80%;
+}
+
+.column {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
