--- a/CSS/projekt_style.css
+++ b/CSS/projekt_style.css
@@ -40,3 +40,20 @@ body
     flex-direction: column;
     align-items: center;
 }
+
+#impressum {
+    padding: 2em;
+    background-color: #e2e2e2; /* Hellgrau als Kontrast */
+    margin: 2em 0;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+#impressum h1 {
+    font-size: 1.5em;
+    margin-bottom: 1em;
+}
+
+#impressum p {
+    margin: 0.5em 0;
+}
