--- a/CSS/snake.css
+++ b/CSS/snake.css
@@ -1,30 +1,96 @@
-body {
-    
-    background-image: url(../Image/background0.jpg);
-    background-repeat: no-repeat;
-    background-size: cover;
 
-}
-.game_window
+.container
 {
     display: flex;
-    justify-content: center;
+    flex-direction: column;
+    justify-content:center;
     align-items: center;
-    height: 70vh;
-    margin: 0;
+    
 }
-.start
+.start-btn
 {
-    width: auto;
-    height: auto;
-    background-color: blueviolet;
-    color: aqua;
-    font-size: 30px;
-    margin: 0px 0px 0px 900px; 
+    width: 100px;
+    height: 50px;
+    background-color: #2e2e2e;
+    color: #fff;
+    transition: background-color 0.3s ease;
+    cursor: pointer;    
+}
+.start-btn:hover
+{
+    background-color: #585656;
 }
 
 canvas {
-    border: 1px solid #fff;
+    border: 2px solid #2e2e2e;
     background-image: url(../Image/Projects.png);
-  
+    background-repeat: no-repeat;
+    background-size: 100%;
+}
+body {
+    font-family: Arial, sans-serif;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    color: #333; /* Anthrazit */
+}
+
+nav {
+    background-color: #2e2e2e; /* Anthrazit */
+    color: #fff;
+    padding: 1em 0;
+}
+
+nav ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    justify-content: center;
+}
+
+nav ul li {
+    margin: 0 1em;
+}
+
+nav ul li a {
+    color: #fff;
+    text-decoration: none;
+}
+
+nav ul li a:hover {
+    text-decoration: underline;
+}
+
+footer {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    padding-left: 10px;
+    padding-bottom: 5px;
+    padding-top: 5px;
+    background-color: #2e2e2e; /* Anthrazit */
+    color: #fff;
+    position: fixed;
+    width: 100%;
+    bottom: 0;
+}
+
+footer a {
+    color: #fff;
+    text-decoration: none;
+}
+
+footer a:hover {
+    text-decoration: underline;
+}
+.github-logo {
+    width: 24px;
+    height: 24px;
+    vertical-align: middle;
+}
+
+.impressum-div
+{
+    padding-left: 10px;
 }
