--- a/CSS/index.css
+++ b/CSS/index.css
@@ -34,7 +34,7 @@ nav ul li a:hover {
 }
 
 section {
-    padding: 2em;
+    padding: 1em;
 }
 
 #home {
@@ -50,7 +50,7 @@ section {
     flex-direction: row; /* Moves the image to the right */
     align-items: center;
     justify-content: space-between;
-    max-width: 900px;
+    max-width: 70%;
     margin: 0 auto;
     padding: 10px;
     font-family: Arial, sans-serif;
@@ -88,13 +88,13 @@ p {
 }
 
 .carousel {
-    width: 60%;
-    margin-top: 2em;
+    width: 50%;
+    margin-top: 1em;
 }
 
 .carousel img {
-    width: 50%;
-    border-radius: 10px;
+    width: 30%;
+    border-radius: 5px;
 }
 a {
     color: #75a4d3;
