--- a/CSS/index.css
+++ b/CSS/index.css
@@ -1,3 +1,4 @@
+/* Base styles */
 body {
     font-family: Arial, sans-serif;
     margin: 0;
@@ -45,7 +46,6 @@ section {
 }
 
 .profile {
-    
     display: flex;
     flex-direction: row; /* Moves the image to the right */
     align-items: center;
@@ -64,19 +64,20 @@ h1 {
     margin-bottom: 10px;
     color: #777676;
 }
-.title
-{
-    display: flex;
-    padding-left: 25em;
+
+.title {
+    text-align: center;
     font-size: 2em;
     margin-bottom: 5px;
     color: #777676;
 }
+
 p {
     font-size: 1.1em;
     color: #797878;
     line-height: 1.6;
 }
+
 .profile-pic {
     width: 150px;
     height: 250px;
@@ -84,7 +85,6 @@ p {
     object-fit: cover;
     margin-left: 10px;
     margin-right: 10px;
-
 }
 
 .carousel {
@@ -96,6 +96,7 @@ p {
     width: 30%;
     border-radius: 5px;
 }
+
 a {
     color: #75a4d3;
     text-decoration: none;
@@ -104,6 +105,7 @@ a {
 a:hover {
     text-decoration: underline;
 }
+
 .project {
     background-color: #ffffff;
     margin: 1em 0;
@@ -112,7 +114,6 @@ a:hover {
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     border-left: 5px solid #007bff; /* Blau */
 }
-
 
 #impressum {
     padding: 2em;
@@ -153,13 +154,68 @@ footer a {
 footer a:hover {
     text-decoration: underline;
 }
+
 .github-logo {
     width: 24px;
     height: 24px;
     vertical-align: middle;
 }
 
-.impressum-div
-{
+.impressum-div {
     padding-left: 10px;
+}
+
+/* Responsive styles */
+@media (max-width: 768px) {
+    .profile {
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+    }
+
+    .profile-pic {
+        width: 100px;
+        height: 150px;
+        margin: 10px 0;
+    }
+
+    .carousel {
+        width: 80%;
+    }
+
+    .carousel img {
+        width: 100%;
+    }
+
+    .start-btn {
+        width: 80px;
+        height: 25px;
+    }
+
+    .title {
+        padding-left: 0;
+    }
+}
+
+@media (max-width: 480px) {
+    .title {
+        font-size: 1.5em;
+    }
+
+    .profile p {
+        font-size: 14px;
+    }
+
+    .start-btn {
+        width: 70px;
+        height: 20px;
+    }
+
+    footer {
+        padding: 5px;
+    }
+
+    .contact-div a, .impressum-div a {
+        font-size: 14px;
+    }
 }
