--- a/CSS/snake.css
+++ b/CSS/snake.css
@@ -1,32 +1,4 @@
-
-.container
-{
-    display: flex;
-    flex-direction: column;
-    justify-content:center;
-    align-items: center;
-    
-}
-.start-btn
-{
-    width: 100px;
-    height: 50px;
-    background-color: #2e2e2e;
-    color: #fff;
-    transition: background-color 0.3s ease;
-    cursor: pointer;    
-}
-.start-btn:hover
-{
-    background-color: #585656;
-}
-
-canvas {
-    border: 2px solid #2e2e2e;
-    background-image: url(../Image/Projects.png);
-    background-repeat: no-repeat;
-    background-size: 100%;
-}
+/* Base styles */
 body {
     font-family: Arial, sans-serif;
     margin: 0;
@@ -47,6 +19,7 @@ nav ul {
     padding: 0;
     display: flex;
     justify-content: center;
+    flex-wrap: wrap;
 }
 
 nav ul li {
@@ -62,13 +35,43 @@ nav ul li a:hover {
     text-decoration: underline;
 }
 
+.container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 20px;
+}
+
+.start-btn {
+    width: 100px;
+    height: 30px;
+    background-color: #2e2e2e;
+    color: #fff;
+    transition: background-color 0.3s ease;
+    cursor: pointer;
+    margin-top: 20px;
+}
+
+.start-btn:hover {
+    background-color: #585656;
+}
+
+canvas {
+    border: 2px solid #2e2e2e;
+    background-image: url(../Image/Projects.png);
+    background-repeat: no-repeat;
+    background-size: 100%;
+    max-width: 100%;
+    height: auto;
+}
+
 footer {
     display: flex;
     flex-direction: column;
+    align-items: center;
     text-align: center;
-    padding-left: 10px;
-    padding-bottom: 5px;
-    padding-top: 5px;
+    padding: 10px;
     background-color: #2e2e2e; /* Anthrazit */
     color: #fff;
     position: fixed;
@@ -84,13 +87,70 @@ footer a {
 footer a:hover {
     text-decoration: underline;
 }
+
 .github-logo {
     width: 24px;
     height: 24px;
     vertical-align: middle;
+    margin-right: 8px;
 }
 
-.impressum-div
-{
-    padding-left: 10px;
+.impressum-div {
+    padding: 5px;
+}
+
+.profile-pic {
+    max-width: 100%;
+    height: auto;
+    border-radius: 50%;
+}
+
+.carousel img {
+    width: 100%;
+    height: auto;
+}
+
+/* Responsive styles */
+@media (max-width: 768px) {
+    nav ul {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    nav ul li {
+        margin: 5px 0;
+    }
+
+    .container {
+        padding: 10px;
+    }
+
+    .start-btn {
+        width: 80px;
+        height: 25px;
+    }
+
+    .profile p {
+        padding: 0 10px;
+    }
+}
+
+@media (max-width: 480px) {
+    .profile p {
+        font-size: 14px;
+    }
+
+    .start-btn {
+        width: 70px;
+        height: 20px;
+    }
+
+    footer {
+        padding: 5px;
+        font-size: 14px;
+    }
+
+    .contact-div a, .impressum-div a {
+        font-size: 14px;
+    }
 }
