changes made to password manager

--- a/CSS/password_manager.css
+++ b/CSS/password_manager.css
@@ -13,10 +13,16 @@ body {
 .left{
     flex-basis: 50%;
     padding-left: 1%;
+    border-style: solid;
+    border-color: rgb(241, 241, 241);
+    background-color: #dad5d5;
 }
 .right{
     flex-basis: 50%;
     padding-left: 5%;
+    border-style: solid;
+    border-color:rgb(241, 241, 241);
+    background-color: #dad5d5;
 }
 nav {
     background-color: #2e2e2e; /* Anthrazit */
@@ -78,9 +84,7 @@ footer a:hover {
 .impressum-div {
     padding: 5px;
 }
-.carousel2{
-    width: 10%;
-}
+
 
 /* Responsive styles */
 @media (max-width: 768px) {
