--- a/CSS/grammar_game.css
+++ b/CSS/grammar_game.css
@@ -7,9 +7,34 @@ body {
     color: #333; /* Anthrazit */
 }
 
-.main-body{
-    display:flexbox;
-    
+.title{
+    display: flex;
+    justify-content: center;
+    background-color: rgb(233, 44, 11);
+    padding-bottom: 1em;
+}
+.btn{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    gap: 1em;
+    padding: 1em;
+    background-color: rgb(236, 222, 25);
+
+}
+
+#der{
+    width: 70px;
+    font-size: 20px;
+
+}
+#die{
+    width: 70px;
+    font-size: 20px;
+}
+#das{
+    width: 70px;
+    font-size: 20px;
 }
 
 nav {
@@ -45,7 +70,7 @@ footer {
     flex-direction: column;
     align-items: center;
     text-align: center;
-    padding: 10px;
+    padding: 5px;
     background-color: #2e2e2e; /* Anthrazit */
     color: #fff;
     position: fixed;
