--- a/CSS/grammar_game.css
+++ b/CSS/grammar_game.css
@@ -19,8 +19,12 @@ body {
     justify-content: center;
     gap: 1em;
     padding: 1em;
-    background-color: rgb(236, 222, 25);
+}
 
+.word{
+    display: flex;
+    justify-content: center;
+    background-color: yellow;
 }
 
 #der{
