--- a/pi.claudiu-ghise.de/index.css
+++ b/pi.claudiu-ghise.de/index.css
@@ -1,5 +1,6 @@
 body {
   background-color: rgba(44, 42, 41, 0.854);
+  display: flex;
 }
 
 .title {
@@ -10,11 +11,8 @@ body {
 }
 
 .open {
-  position: absolute;
   height: 200px;
   width: 250px;
-  top: 200px;
-  left: 320px;
   font-size: 50px;
   background-color: rgba(0, 255, 234, 0.184);
   color: rgb(119, 255, 0);
@@ -33,11 +31,8 @@ body {
   color: rgba(139, 33, 33, 0.4);
 }
 .close {
-  position: absolute;
   height: 200px;
   width: 250px;
-  top: 200px;
-  left: 820px;
   z-index: 0;
   font-size: 50px;
   background-color: rgba(0, 255, 234, 0.184);
