--- a/pi.claudiu-ghise.de/index.css
+++ b/pi.claudiu-ghise.de/index.css
@@ -1,67 +1,102 @@
+/* Global Styles */
 body {
   background-color: rgba(44, 42, 41, 0.854);
-  display: flex;
+  margin: 0;
+  padding: 0;
+  font-family: Arial, sans-serif;
 }
 
 .title {
-  font-size: 80px;
+  font-size: 8vw; /* Responsive font size based on viewport width */
   font-weight: bold;
   text-align: center;
-  color: #fff782;
+  color: #79e414;
+  margin-top: 20px;
 }
 
-.open {
-  height: 200px;
-  width: 250px;
-  font-size: 50px;
+.open,
+.close {
+  height: 15vh; /* Height based on viewport height for better scaling */
+  width: 40vw; /* Width based on viewport width */
+  font-size: 5vw; /* Font size based on viewport width */
   background-color: rgba(0, 255, 234, 0.184);
-  color: rgb(119, 255, 0);
-  border: 0px;
+  border: 0;
   border-radius: 25px;
   box-shadow: 0 0 30px rgba(31, 75, 1, 0.6);
   transition: transform 0.1s, box-shadow 0.1s;
+  display: block;
+  margin: 0 auto;
 }
-.open:active {
+
+/* Adding margin to the buttons to create space */
+.open {
+  color: rgb(119, 255, 0);
+  margin-bottom: 5vh; /* Space between open and close buttons */
+}
+
+.close {
+  color: rgb(139, 33, 33);
+}
+
+.open:active,
+.close:active {
   transform: scale(0.9);
   box-shadow: 0 0 30px rgba(127, 255, 0, 0.8);
 }
-.open:disabled {
-  background-color: rgba(0, 255, 234, 0.184);
-  transform: scale(1);
-  color: rgba(139, 33, 33, 0.4);
-}
-.close {
-  height: 200px;
-  width: 250px;
-  z-index: 0;
-  font-size: 50px;
-  background-color: rgba(0, 255, 234, 0.184);
-  color: rgb(139, 33, 33);
-  border: 0px;
-  border-radius: 25px;
-  box-shadow: 0 0 30px rgba(190, 90, 90, 0.6);
-  transition: transform 0.1s, box-shadow 0.1s;
-}
-.close:active {
-  transform: scale(0.9);
-  box-shadow: 0 0 30px rgba(201, 14, 14, 0.8);
-}
+
+.open:disabled,
 .close:disabled {
   background-color: rgba(0, 255, 234, 0.184);
   transform: scale(1);
   color: rgba(139, 33, 33, 0.4);
 }
 
-.not {
-  position: absolute;
-  top: 250px;
-  left: 610px;
+.not,
+.timer {
   color: rgba(214, 128, 47, 0.959);
+  font-size: 4vw; /* Scales the font size for better visibility */
+  text-align: center;
+  margin-top: 20px;
+  display: block;
+  margin: 10px auto;
 }
 
-.timer {
-  position: absolute;
-  top: 310px;
-  left: 680px;
-  color: rgba(214, 128, 47, 0.959);
+/* Media Query for Mobile Devices */
+@media only screen and (max-width: 768px) {
+  .title {
+    font-size: 10vw; /* Adjust title size for smaller screens */
+  }
+
+  .open,
+  .close {
+    height: 12vh; /* Reduce button height for mobile */
+    width: 80vw; /* Make buttons take up more width */
+    font-size: 6vw; /* Scale button font size for smaller screens */
+    margin-bottom: 8vw; /* Increase space between buttons */
+  }
+
+  .not,
+  .timer {
+    font-size: 6vw; /* Increase font size for mobile */
+  }
+}
+
+/* Media Query for Larger Screens (e.g., Desktop) */
+@media only screen and (min-width: 1024px) {
+  .title {
+    font-size: 3vw; /* Adjust title size for larger screens */
+  }
+
+  .open,
+  .close {
+    height: 8vh; /* Button height for desktop */
+    width: 20vw; /* Button width for desktop */
+    font-size: 2.5vw; /* Button font size for desktop */
+    margin-bottom: 2vw; /* Small space between buttons on desktop */
+  }
+
+  .not,
+  .timer {
+    font-size: 2vw; /* Font size for desktop */
+  }
 }
