--- a/pi.claudiu-ghise.de/index.css
+++ b/pi.claudiu-ghise.de/index.css
@@ -10,7 +10,7 @@ body {
   font-size: 8vw; /* Responsive font size based on viewport width */
   font-weight: bold;
   text-align: center;
-  color: #79e414;
+  color: #0dff52;
   margin-top: 20px;
 }
 
