--- a/pi.claudiu-ghise.de/index.css
+++ b/pi.claudiu-ghise.de/index.css
@@ -61,6 +61,24 @@ body {
   margin: 10px auto;
 }
 
+.progress-bar {
+  display: block;
+  margin: 10px auto;
+  width: 25%;
+  height: 20px;
+  background: #e0e0e0;
+  border-radius: 10px;
+  overflow: hidden;
+  box-shadow: 0 0 30px #0debff65;
+}
+
+.progress {
+  width: 0%; /* Adjust percentage */
+  height: 100%;
+  background: #3498db;
+  transition: width 3s ease-in-out;
+}
+
 /* Media Query for Mobile Devices */
 @media only screen and (max-width: 768px) {
   .title {
